Added support for R820T RTL-SDR USB Stick Still need to debug Calibration GUI